<resources>
    <string name="app_name">LightingUp Expert</string>
    <string name="negative_screen_guide_text">向右滑动打开负一屏</string>
    <string name="about_us">About Us</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_terms_of_service">Terms of Service</string>
    <string name="uninstall_instructions">Uninstall Instructions</string>
    <string name="have_more_questions">Have More Questions?</string>
    <string name="contact_us">Contact Us</string>
    <string name="help_center">Help Center</string>
    <string name="toast_camera_permission">Please grant camera permission first</string>
    <string name="flash_guide_top_title">Get Beautiful Flashlight Tools</string>
    <string name="tips_launcher_set_home_title">Select LightingUp Expert\nLauncher as your default launcher</string>
    <string name="ambient_light">Ambient Light</string>
    <string name="text_color">Color</string>
    <string name="text_trans">Trans</string>
    <string name="marquee">Marquee</string>
    <string name="text_direction">Direction</string>
    <string name="text_left">Left</string>
    <string name="text_right">Right</string>
    <string name="text_size">Size</string>
    <string name="text_speed">Speed</string>
    <string name="text_text_color">Text Color</string>
    <string name="text_background_color">Background Color</string>
    <string name="text_play">Play</string>
    <string name="text_wifi">Wi-Fi</string>
    <string name="text_torch">Torch</string>
    <string name="text_mobile_data">Mobile data</string>
    <string name="text_hotspot">Hotspot</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_location">Location</string>
    <string name="text_flight_mode">Flight mode</string>
    <string name="text_help_center">Help center</string>
    <string name="text_about_us">About us</string>
    <string name="change_default_launcher">Change Default Launcher</string>
    <string name="uninstall">Uninstall</string>

</resources>
