<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
        android:id="@+id/container_navi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/iv_navi_back_white"
            android:layout_marginStart="16dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_main_color"
            android:textSize="16sp"
            android:text="@string/about_us"
            android:layout_marginStart="50dp"
            android:layout_gravity="center_vertical"/>
    </FrameLayout>


    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="36dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_privacy"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/text_privacy_policy"
            android:textSize="14sp"
            android:textColor="@color/btn_main_color"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_uninstall"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/uninstall_instructions"
            android:textSize="14sp"
            android:textColor="@color/btn_main_color"
            android:gravity="center"
            android:layout_marginTop="24dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
