<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <androidx.appcompat.widget.AppCompatImageView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:src="@drawable/iv_guide_bg"
       android:scaleType="centerCrop"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash_guide_top_title"
        android:textSize="20sp"
        android:textColor="@color/text_main_color"
        android:fontFamily="@font/product_sans_b"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/container_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintVertical_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tips_launcher_set_home_title"
            android:textSize="14sp"
            android:textColor="@color/text_second_color"
            android:fontFamily="@font/product_sans_b"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="center_horizontal"/>

        <FrameLayout
            android:id="@+id/container_tips2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/iv_app_icon"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_second_color"
                android:text="@string/app_name"
                android:textSize="12sp"
                android:fontFamily="@font/product_sans_b"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="64dp"/>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/iv_tips_guide_dot"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="6dp"/>
        </FrameLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="-40dp"
        android:src="@drawable/iv_guide_finger"
        app:layout_constraintTop_toBottomOf="@id/container_tips"
        app:layout_constraintStart_toEndOf="@id/container_tips"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_guide_btn"
        android:layout_marginBottom="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
