<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_main_color">

    <FrameLayout
        android:id="@+id/container_navi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/iv_navi_back_white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marquee"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/product_sans_r"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"/>
    </FrameLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_navi"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_marginTop="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/container_marquee_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="24dp"
                    app:cardBackgroundColor="@color/black"
                    android:elevation="0dp"
                    app:cardElevation="0dp">

                    <View
                        android:id="@+id/color_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.example.negative_screen.MarqueeView
                        android:id="@+id/tv_marquee"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:direction="left"
                        app:isRepeat="true"
                        app:speed="100"
                        app:startPoint="start" />
                </androidx.cardview.widget.CardView>

                <View
                    android:id="@+id/marquee_border"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </FrameLayout>

            <!-- 文字输入 -->
            <LinearLayout
                android:id="@+id/container_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/edit_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:background="@null"
                    android:hint="Text Led"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:fontFamily="@font/product_sans_r"
                    android:layout_marginHorizontal="14dp"/>

            </LinearLayout>

            <!-- direction -->
            <LinearLayout
                android:id="@+id/container_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_direction"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical"/>
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn_left"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/white_54"
                        android:textSize="16sp"
                        android:text="@string/text_left"
                        android:fontFamily="@font/product_sans_r" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp"/>

                    <TextView
                        android:id="@+id/btn_right"
                        android:layout_width="0dp"
                        android:layout_height="37dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/white_54"
                        android:textSize="16sp"
                        android:text="@string/text_right"
                        android:fontFamily="@font/product_sans_r" />
                </LinearLayout>


                <!-- size -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/tv_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical|end"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:layout_marginTop="4dp">

                    <View
                        android:id="@+id/bg_seekbar_size"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_gravity="center_vertical"/>

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekbar_size"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:max="200"
                        android:min="0"
                        android:progress="100"
                        android:splitTrack="false"
                        android:paddingStart="7dp"
                        android:paddingEnd="7dp"
                        android:thumb="@drawable/iv_seekbar_thumb"
                        android:progressDrawable="@drawable/custom_seekbar"
                        android:layout_gravity="center_vertical" />
                </FrameLayout>

                <!-- speed -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_speed"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:id="@+id/tv_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100%"
                        android:textSize="14sp"
                        android:textColor="@color/text_second_color"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical|end"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="14dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="30dp">

                    <View
                        android:id="@+id/bg_seekbar_speed"
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_marginHorizontal="4dp"
                        android:layout_gravity="center_vertical"/>

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekbar_speed"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:max="200"
                        android:min="0"
                        android:progress="100"
                        android:splitTrack="false"
                        android:paddingStart="7dp"
                        android:paddingEnd="7dp"
                        android:thumb="@drawable/iv_seekbar_thumb"
                        android:progressDrawable="@drawable/custom_seekbar"
                        android:layout_marginEnd="1dp"
                        android:layout_gravity="center_vertical" />
                </FrameLayout>

            </LinearLayout>

            <!-- color -->
            <LinearLayout
                android:id="@+id/container_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="72dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_text_color"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/product_sans_r"
                        android:layout_gravity="center_vertical" />
                </FrameLayout>

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/seekbar_text_color"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:max="100"
                    android:min="0"
                    android:progress="0"
                    android:splitTrack="false"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:paddingVertical="6dp"
                    android:thumb="@drawable/iv_seekbar_thumb_black"
                    android:layout_marginTop="2dp"
                    android:layout_gravity="center_vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="8dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/trans_bg"/>

                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/seekbar_text_trans"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:max="100"
                        android:min="0"
                        android:progress="100"
                        android:splitTrack="false"
                        android:paddingStart="7dp"
                        android:paddingEnd="7dp"
                        android:paddingVertical="6dp"
                        android:thumb="@drawable/iv_seekbar_thumb_black"
                        android:layout_gravity="center_vertical"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />
                </FrameLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_play"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:textColor="@color/text_main_color"
                android:textSize="16sp"
                android:text="@string/text_play"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
