<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <View
        android:id="@+id/color_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/container_navi"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/iv_navi_back_white"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/ambient_light"
            android:textColor="@color/white"
            android:fontFamily="@font/product_sans_r"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="50dp"/>
    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_option"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/page_main_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/text_color"
                android:fontFamily="@font/product_sans_r"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbar_color"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="100"
                android:min="0"
                android:progress="0"
                android:splitTrack="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingVertical="11dp"
                android:thumb="@drawable/gradient_seekbar_thumb_big"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="1dp"
                android:layout_gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/text_trans"
                android:fontFamily="@font/product_sans_r"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="71dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/trans_bg"/>

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekbar_trans"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:max="100"
                android:min="0"
                android:progress="100"
                android:splitTrack="false"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingVertical="11dp"
                android:thumb="@drawable/gradient_seekbar_thumb_big"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="1dp"
                android:layout_gravity="center_vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
